--- a/2867380-lab2.html
+++ b/2867380-lab2.html
@@ -26,15 +26,15 @@
       }
       .card{
         padding: 15px;
-        border: 1px solid #ddd;
-        border-radius: 8px;
+        border: 10px solid #ddd;
+        border-radius: 10px;
         margin: 10px 0;
       }
       a{
-        color purple;
+        color: purple;
       }
       footer{
-        backround-color: blue;
+        background-color: blue;
       }
     </style>
 </head>
