--- a/2867380-lab2.html
+++ b/2867380-lab2.html
@@ -34,7 +34,7 @@
         color: purple;
       }
       footer{
-        background-color: blue;
+        background-color: pink;
       }
     </style>
 </head>
