--- a/2867380-lab2.html
+++ b/2867380-lab2.html
@@ -56,12 +56,12 @@
         <section class="card" id="about">
             <h2>About Me</h2>
             <p>If there's one thing I had to do on Earth before leaving? It would be to play Hollow Knight:Silksong. 
-              I do Computer Science at Wits and I learn a lot in this course to build the greatest game to come out of South Africa </p>
+              I do Computer Science at Wits and I learn a lot in this course to build the greatest game to come out of South Africa. </p>
         </section>
 
         <article class="card" id="projects">
             <h2>Latest Project</h2>
-            <p>I am working on a 2d soulslike game</p>
+            <p>I am working on a 2d soulslike game.</p>
         </article>
     </main>
 
